src/objects/Proposal__c.object
<CustomObject>
    <description>Object used to store proposals that the Agency Sales team sends to their agencies.</description>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <formula>Agency_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Agency__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Proposals</relationshipLabel>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Amount_Total__c</fullName>
        <formula>Booked_Premium_Amount__c + Booked_Standard_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Amount - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Premium_Amount__c</fullName>
        <label>Booked Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Premium_Products__c</fullName>
        <label>Booked Premium Products</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contextual Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job of the week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Email Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Job</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Booked_Print_Ad_Size__c</fullName>
        <label>Booked Print Ad Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Standard_Amount__c</fullName>
        <label>Booked Standard Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Standard_Products__c</fullName>
        <label>Booked Standard Products</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the school establishment that needs a vacancy advertised.</inlineHelpText>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>Date the Proposal is closed.</inlineHelpText>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Proposal_Status__c, &quot;Open&quot;),
   Proposed_Amount_Total__c,
Booked_Amount_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Amount of the Proposal. Open Proposals will show Total Proposed Amount, while Closed Proposals will show Total Booked Amount.</inlineHelpText>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Booking_or_Post_Booking__c</fullName>
        <label>Pre-Booking or Post-Booking?</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Booking</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Booking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <label>Proposal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Amount_Total__c</fullName>
        <formula>Proposed_Premium_Amount__c + Proposed_Standard_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Amount - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Premium_Amount__c</fullName>
        <label>Proposed Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Premium_Products__c</fullName>
        <label>Proposed Premium Products</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contextual Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job of the week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Email Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Job</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Print_Ad_Size__c</fullName>
        <label>Proposed Print Ad Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Standard_Amount__c</fullName>
        <label>Proposed Standard Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Standard_Products__c</fullName>
        <label>Proposed Standard Products</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Related_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Booking</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>MSL Booking</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won - Low</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won - Medium</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won - Premium</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>Booked_Amount_Total__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Proposals</label>
    </listViews>
    <listViews>
        <fullName>Closed_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>Booked_Amount_Total__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Proposals - Closed</label>
    </listViews>
    <listViews>
        <fullName>MyProposals</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Proposals</label>
    </listViews>
    <listViews>
        <fullName>MyProposalsClosed</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>Booked_Amount_Total__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Proposals - Closed</label>
    </listViews>
    <listViews>
        <fullName>MyProposalsOpen</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>Booked_Amount_Total__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Proposals - Open</label>
    </listViews>
    <listViews>
        <fullName>Open_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Proposed_Amount_Total__c</columns>
        <columns>Booked_Amount_Total__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Proposals - Open</label>
    </listViews>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <recordTypes>
        <fullName>Closed_Proposal</fullName>
        <active>true</active>
        <description>Choose this proposal record type to create CLOSED proposals.</description>
        <label>Closed Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Create</fullName>
        <active>true</active>
        <description>Choose this proposal record type to create OPEN proposals.</description>
        <label>Open Proposal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Proposal_Req_Fields</fullName>
        <active>true</active>
        <description>Validation rule that ensures the Proposal&apos;s Premium or Standard Amounts are Populated before it is saved.</description>
        <errorConditionFormula>AND(ISPICKVAL(Stage__c, &quot;Proposal/Price Quote&quot;),
ISBLANK(Proposed_Premium_Amount__c),
ISBLANK(Proposed_Standard_Amount__c)
)</errorConditionFormula>
        <errorMessage>Please fill out either the Proposed Premium or Proposed Standard Amount before saving this Proposal.</errorMessage>
    </validationRules>
</CustomObject>